[package]
name = "mongodb-gridfs-ext"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
mongodb = { version = "2.3.1", features = ["tokio-sync"] }
mongodb-gridfs = "0.2.2"
tokio = { version = "1.2.1", features = ["full"] }

[dev-dependencies]
chain_ext = { git = "https://github.com/limoiie/chain-ext.rs", version = "0.1.0" }
fake = "2.5.0"
tempfile = "3.3.0"
test-utilities = { git = "https://github.com/limoiie/test-utilities.rs", version = "0.1.2" }
